# certoratomation

./: .gitignore  .gitmodules  README.md  pyproject.toml  pytest.ini
certoratomation/: __main__.py  cli.py
certoratomation/data_classes/: rules_layout.py
certoratomation/pages/: common.py  contracts_section.py  jobs_info_section.py  main_screen.py  rules_section.py  tool_bar.py
certoratomation/server/: app.py  certora_test_manager.py  constants.py  test_runner.py
certoratomation/server/clients/: certora_cloud_client.py
certoratomation/server/handlers/: constants.py  run_environment.py  run_test_package.py
local/: config_file.json
tests/: conftest.py  out_report.html  out_report.xml  playground.py
tests/FunctionalTests/: out_report.xml  test_contracts_functionality.py  test_jobs_info_functionality.py  test_rules_functionality.py
tests/NavigationTests/: out_report.xml  test_main_screen_navigation.py  test_tool_bar_navigation.py
tests_local_resources/Reports/treeView/: rule_output_2.json  rule_output_7.json  rule_output_8.json  rule_output_9.json
tests_local_resources/Reports/treeView2/: rule_output_1.json  rule_output_4.json  rule_output_5.json  rule_output_6.json  treeViewStatus_10.json
tests_local_resources/treeView2/: rule_output_3.json  treeViewStatus.json
